<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:title="@string/reset"
        android:icon="@drawable/ic_undo"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        android:onClick="resetClick"/>
    <item
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        android:onClick="filterClick"/>
</menu>