<?xml version="1.0" encoding="utf-8"?>
<com.example.imetu.imet.widget.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imetu.imet.activity.AddEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="Enter Name Here"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/addEditImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginRight="6dp"
            android:layout_toRightOf="@+id/etName"
            app:srcCompat="@mipmap/defaultperson" />

        <android.support.v7.widget.CardView
            android:id="@+id/appearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addEditImage"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/appearance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/appearance_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/appearance_title"
                    android:layout_below="@+id/appearance_title"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvGender_StrID"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/etGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tvGender"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/tvGender"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/GenderRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_Male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radioMale_StrID" />

                        <RadioButton
                            android:id="@+id/radio_Female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radioFemale_StrID" />

                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvGender"
                    android:layout_below="@+id/tvGender"
                    android:layout_marginTop="20dp"
                    android:text="@string/tvHeight_StrID"
                    android:textSize="20sp" />

                <com.xw.repo.BubbleSeekBar
                    android:id="@+id/seekbarHeight"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tvHeight"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="30px"
                    android:layout_toRightOf="@+id/tvHeight"
                    app:bsb_bubble_color="@color/colorPrimary"
                    app:bsb_bubble_text_color="@color/colorPrimaryDark"
                    app:bsb_max="190"
                    app:bsb_min="150"
                    app:bsb_progress="165"
                    app:bsb_second_track_color="@color/colorAccent"
                    app:bsb_show_section_text="true"
                    app:bsb_show_thumb_text="true"
                    app:bsb_track_color="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvBodyShape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvHeight"
                    android:layout_below="@+id/seekbarHeight"
                    android:layout_marginTop="20dp"
                    android:text="@string/tvBodyShape_StrID"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerBodyShape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tvBodyShape"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/tvBodyShape"
                    android:entries="@array/bodyshape_array" />

                <TextView
                    android:id="@+id/tvHair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvBodyShape"
                    android:layout_below="@+id/spinnerBodyShape"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvHair_StrID"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/etHair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tvHair"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/tvHair"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinnerHairLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:entries="@array/hairLength_array" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/spinnerHairLength"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox_Permed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkboxPermedHair_StrID" />

                        <CheckBox
                            android:id="@+id/checkbox_Dyed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkboxDyedHair_StrID" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvGlasses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvHair"
                    android:layout_below="@+id/etHair"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvGlasses_StrID"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/switchGlasses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tvGlasses"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/tvGlasses" />


                <TextView
                    android:id="@+id/tvOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvGlasses"
                    android:layout_below="@+id/switchGlasses"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvOther_StrID"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvOther"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:inputType="textMultiLine" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/basicInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appearance"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/information_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/information_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/information_title"
                    android:layout_below="@+id/information_title"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvPhone_StrID"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tvPhone"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tvPhone"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvPhone"
                    android:layout_below="@+id/etPhone"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvEmail_StrID"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tvEmail"
                    android:layout_below="@+id/etPhone"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tvEmail"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvRelationship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvEmail"
                    android:layout_below="@+id/etEmail"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvRelationship_StrID"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etRelationship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tvRelationship"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tvRelationship"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvRelationship"
                    android:layout_below="@+id/etRelationship"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvEvent_StrID"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tvEvent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tvEvent"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvEvent"
                    android:layout_below="@+id/etEvent"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvLocation_StrID"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tvLocation"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tvLocation"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvYearMet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvLocation"
                    android:layout_below="@+id/etLocation"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvYearMet_StrID"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etYearMet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tvYearMet"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tvYearMet"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvTopicDiscussed"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignStart="@+id/tvYearMet"
                    android:layout_below="@+id/etYearMet"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvTopicDiscussed_StrID"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etTopicDiscussed"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tvTopicDiscussed"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:inputType="textMultiLine" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</com.example.imetu.imet.widget.ObservableScrollView>

